# thoughts.waylonwalker.com

./: .dockerignore  .gitignore  .thoughts-copier-answers.yml  CHANGELOG.md  Dockerfile  README.md  alembic.ini  compiled_templates  fly.toml  gross.sh  justfile  posts.db  posts.json  pre_tailwind.py  pyproject.toml  roadmap.md  tailwind.config.js  temp.py
.tailwind/: base.html  delete_post_item.html  edit_thought.html  hx_get_new_thought.html  index.html  login.html  login_form.html  new_thought.html  post_item.html  posts.html  test.html
migrations/: env.py
migrations/versions/: 354419ed972c_create_users.py.broke  6fbc4459f3d3_published.py  959992e78d54_create_users.py  d754168984f4_init.py  f419e0f94968_date.py
restricted/: index.html  restricted.txt
static/: app.css  base.css  input.css  main.css  manifest.json  output.css  service-worker.js
tailwind/: app.css
templates/: analytics.html  app.css  base.html  delete_post_item.html  edit_thought.html  hx_get_new_thought.html  image_modal.html  index.html  login.html  login_form.html  login_modal.html  logout.html  logout_partial.html  new_thought.html  new_thought_modal.html  post-og.html  post.html  post.txt  post_item.html  posts.html  signup.html  signup_form.html  signup_partial.html  test.html  test_partial.html
templates/components/: contribution_graph.html  empty_posts.html  longest_posts.html  post_stats.html  tag_graph.html  tag_stats.html  top_domains.html
thoughts/: __about__.py  __main__.py  config.py  highlight.py  htmx.py  optional.py
thoughts/api/: analytics.py  app.py  image_modal.py  post.py  user.py
thoughts/cli/: api.py  app.py  common.py  config.py  tui.py
thoughts/models/: post.py  user.py
thoughts/tui/: app.py
