[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["thoughts"]

[project]
name = "thoughts"
description = 'thoughts'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Waylon S. Walker", email = "waylon@waylonwalker.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "alembic",
    "anyconfig",
    "arel",
    "diskcache",
    "fastapi",
    "fsspec",
    "httpx",
    "jinja2",
    "markdown-it-py[plugins]",
    "minio",
    "passlib[bcrypt]",
    "pydantic<2.0",
    "python-jose",
    "python-multipart",
    "rich",
    "s3fs",
    "sqlite-utils",
    "sqlmodel",
    "sse-starlette",
    "textual",
    "typer",
    "uvicorn[standard]",
    "Mastodon.py",
    "beautifulsoup4",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/waylonwalker/thoughts#readme"
Issues = "https://github.com/waylonwalker/thoughts/issues"
Source = "https://github.com/waylonwalker/thoughts"
Changelog = "https://github.com/waylonwalker/thoughts"

[project.scripts]
thoughts = "thoughts.cli.app:app"

[tool.hatch.version]
path = "thoughts/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "ipython",
  "mypy",
  "pyflyby",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-rich",
  "ruff",
  "black",
]
[tool.hatch.envs.default.scripts]
test = "coverage run -m pytest"
cov = "coverage-rich"
lint = "ruff thoughts"
format = "black thoughts"
format-check = "black --check thoughts"
build-docs = "markata build"
lint-test = [
 "lint",
 "format-check",
 "test",
 "cov",
]
test-lint = "lint-test"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "thoughts/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
addopts = "-ra -q --rich"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage_rich]
fail-under=80


